src/objects/BOM_Product_Part__c/BOM_Product_Part__c.object-meta.xml
<CustomObject>
    <label>Junction Components</label>
    <nameField>
        <label>Components Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junction Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>