src/objects/BOM_Product_Part__c/fields/BOM_Part__c.field-meta.xml
<CustomField>
    <fullName>BOM_Part__c</fullName>
    <label>Master Components</label>
    <referenceTo>BOM_Parts__c</referenceTo>
    <relationshipLabel>Junction Components</relationshipLabel>
    <relationshipName>BOM_Product_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>