src/objects/BOM_Product_Part__c/fields/English_Description__c.field-meta.xml
<CustomField>
    <fullName>English_Description__c</fullName>
    <label>English Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>