src/objects/BOM_Product_Part__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Junction Components</relationshipLabel>
    <relationshipName>JunctionComponents</relationshipName>
    <type>Lookup</type>
</CustomField>