src/objects/BOM_Product_Part__c/listViews/LBK_BIMO.listView-meta.xml
<ListView>
    <fullName>LBK_BIMO</fullName>
    <columns>NAME</columns>
    <columns>BOM_Part__c</columns>
    <columns>Quantity__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>LBK BIMO</label>
    <language>en_US</language>
</ListView>